; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_debug.c_DebuggerTrapWithState.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_debug.c_DebuggerTrapWithState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i64 0, align 8
@TRAP_DEBUGGER = common dso_local global i32 0, align 4
@CPUDEBUGGERRET = common dso_local global i32 0, align 4
@DBOP_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DebuggerTrapWithState(i32 %0, i8* %1, i8* %2, i32* %3, i32 %4, i8* %5, i64 %6, i64 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i8* %5, i8** %14, align 8
  store i64 %6, i64* %15, align 8
  store i64 %7, i64* %16, align 8
  %18 = call i64 (...) @ml_get_interrupts_enabled()
  %19 = load i64, i64* @FALSE, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  %23 = load i32, i32* %9, align 4
  %24 = load i8*, i8** %10, align 8
  %25 = load i8*, i8** %11, align 8
  %26 = load i32*, i32** %12, align 8
  %27 = load i32, i32* %13, align 4
  %28 = load i8*, i8** %14, align 8
  %29 = load i64, i64* %15, align 8
  %30 = load i64, i64* %16, align 8
  %31 = call i32 @DebuggerSaveState(i32 %23, i8* %24, i8* %25, i32* %26, i32 %27, i8* %28, i64 %29, i64 %30)
  %32 = load i32, i32* @TRAP_DEBUGGER, align 4
  %33 = load i32, i32* @CPUDEBUGGERRET, align 4
  store i32 %33, i32* %17, align 4
  %34 = load i32, i32* @DBOP_NONE, align 4
  %35 = load i64, i64* @FALSE, align 8
  %36 = call i32 @DebuggerSaveState(i32 %34, i8* null, i8* null, i32* null, i32 0, i8* null, i64 %35, i64 0)
  %37 = load i32, i32* %17, align 4
  ret i32 %37
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @ml_get_interrupts_enabled(...) #1

declare dso_local i32 @DebuggerSaveState(i32, i8*, i8*, i32*, i32, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
